display: flex in .container and max width 1200px

--- a/flexbox-1/styles.css
+++ b/flexbox-1/styles.css
@@ -9,6 +9,9 @@ body {
 .container {
     background-color: hsl(35, 40%, 95%);
     border-radius: 4px;
+    width: 1200px;
+    display: flex;
+
 }
 
 .item {
