--- a/flexbox-1/styles.css
+++ b/flexbox-1/styles.css
@@ -9,7 +9,6 @@ body {
 .container {
     background-color: hsl(35, 40%, 95%);
     border-radius: 4px;
-    width: 1200px;
     display: flex;
 
 }
@@ -19,10 +18,18 @@ body {
     border: 1px solid hsl(35, 40%, 78%);
     border-radius: 4px;
     box-shadow: 2px 2px 4px hsl(35, 40%, 78%);
+    display: flex;
+    flex-wrap: wrap;
+
 }
 
 #aside {
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 298px;
+
+}
+
+#main {
+
 }
