--- a/flexbox-1/styles.css
+++ b/flexbox-1/styles.css
@@ -9,8 +9,9 @@ body {
 .container {
     background-color: hsl(35, 40%, 95%);
     border-radius: 4px;
+    max-width: 1200px;
     display: flex;
-    width: 1200px;
+
 }
 
 .item {
@@ -18,8 +19,6 @@ body {
     border: 1px solid hsl(35, 40%, 78%);
     border-radius: 4px;
     box-shadow: 2px 2px 4px hsl(35, 40%, 78%);
-    display: flex;
-    flex-wrap: wrap;
 
 }
 
@@ -31,5 +30,7 @@ body {
 }
 
 #main {
-
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 900px;
 }
