--- a/flexbox-1/styles.css
+++ b/flexbox-1/styles.css
@@ -19,18 +19,16 @@ body {
     border: 1px solid hsl(35, 40%, 78%);
     border-radius: 4px;
     box-shadow: 2px 2px 4px hsl(35, 40%, 78%);
-
+    padding: 16px;
 }
 
 #aside {
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: 298px;
+    flex-basis: 266px;
 
 }
 
 #main {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 900px;
+
 }
