--- a/flexbox-1/styles.css
+++ b/flexbox-1/styles.css
@@ -20,15 +20,12 @@ body {
     border-radius: 4px;
     box-shadow: 2px 2px 4px hsl(35, 40%, 78%);
     padding: 16px;
+    margin: 16px;
 }
 
 #aside {
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 266px;
-
-}
-
-#main {
 
 }
