--- a/flexbox-1/styles.css
+++ b/flexbox-1/styles.css
@@ -7,11 +7,11 @@ body {
 }
 
 .container {
+    /*On mobile!*/
     background-color: hsl(35, 40%, 95%);
     border-radius: 4px;
-    max-width: 1200px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
 
 }
 
@@ -23,16 +23,19 @@ body {
     padding: 16px;
     margin: 16px;
 }
+
 #aside {
+    /*On mobile!*/
     flex-grow: 1;
     flex-shrink: 1;
 }
 
 
+@media screen and (min-width: 575px) /*On big screen!*/{
 
-@media screen and (min-width: 575px){
     .container {
-        flex-direction: row;
+        max-width: 1200px;
+        flex-wrap: nowrap;
 
     }
 
@@ -40,5 +43,10 @@ body {
         flex-grow: 0;
         flex-shrink: 0;
         flex-basis: 266px;
+    }
+
+    #main {
+        flex-shrink: 1;
+        flex-grow: 1;
     }
 }
