--- a/flexbox-2/styles.css
+++ b/flexbox-2/styles.css
@@ -1,3 +1,12 @@
+body {
+    color: hsl(196, 64%, 37%);
+    background-color: hsl(40, 88%, 97%);
+}
+
 .container {
     display: flex;
+}
+
+.header1 {
+
 }
