--- a/flexbox-2/styles.css
+++ b/flexbox-2/styles.css
@@ -7,6 +7,11 @@ body {
     display: flex;
 }
 
-.header1 {
-
+.item {
+    margin: 16px;
+    color: hsl(196,64%,37%);
+    background-color: hsl(195,62%,95%);
+    display: flex;
+    align-items: flex-end;
+    text-align: center;
 }
