--- a/flexbox-2/styles.css
+++ b/flexbox-2/styles.css
@@ -7,6 +7,11 @@ body {
     display: flex;
 }
 
+header {
+    display: flex;
+    flex-direction: column;
+}
+
 .item {
     margin: 16px;
     color: hsl(196,64%,37%);
