added flexproperties to .item

--- a/flexbox-2/styles.css
+++ b/flexbox-2/styles.css
@@ -1,6 +1,7 @@
 body {
     color: hsl(196, 64%, 37%);
     background-color: hsl(40, 88%, 97%);
+
     display: flex;
     justify-content: center;
     text-align: center;
@@ -8,6 +9,7 @@ body {
 
 .container {
     max-width: 1200px;
+
     display: flex;
     justify-content: center;
 }
@@ -16,9 +18,12 @@ body {
     margin: 16px;
     color: hsl(196,64%,37%);
     background-color: hsl(195,62%,95%);
+    height: 350px;
+    text-align: center;
+
     display: flex;
     align-items: flex-end;
-    text-align: center;
     flex-basis: 215px;
-    height: 350px;
+    flex-grow: 1;
+    flex-shrink: 0;
 }
