--- a/flexbox-2/styles.css
+++ b/flexbox-2/styles.css
@@ -1,6 +1,7 @@
 body {
     color: hsl(196, 64%, 37%);
     background-color: hsl(40, 88%, 97%);
+    font-family: Avenir, Arial, sans-serif;
 
     display: flex;
     justify-content: center;
@@ -14,31 +15,38 @@ body {
 .container {
     display: flex;
     text-align: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .item {
+    padding: 16px;
+    margin: 16px;
+    color: hsl(196,64%,37%);
+    background-color: hsl(195,62%,95%);
+    height: 350px;
+
+
+    flex-basis: 215px;
+    flex-grow: 1;
+    flex-shrink: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+}
+@media screen and (min-width: 576px){
+    /*For tablet view, less than 576px means wrap the box!*/
+    .container {
+        flex-wrap: nowrap;
+    }
 
 }
 
 @media screen and (min-width: 1200px){
     .container {
-        display: flex;
-        text-align: center;
+justify-content: space-between;
     }
 
-    .item {
-        padding: 16px;
-        margin: 16px;
-        color: hsl(196,64%,37%);
-        background-color: hsl(195,62%,95%);
-        height: 350px;
-        text-align: center;
-
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        flex-basis: 215px;
-        flex-grow: 1;
-        flex-shrink: 1;
-    }
 }
