--- a/flexbox-3/styles.css
+++ b/flexbox-3/styles.css
@@ -1,7 +1,14 @@
 body {
     background-color: hsl(37,39%,91%);
 }
+.logo{
+    width: 300px;
+}
 
+.hamburger {
+    width: 50px;
+    display: none;
+}
 
 .container {
     width: 1200px;
