turned on flexcontainer and turned of list style type

--- a/flexbox-3/styles.css
+++ b/flexbox-3/styles.css
@@ -14,4 +14,10 @@ body {
     width: 1200px;
     color: hsl(35, 40%, 91%);
     background-color: hsl(211,66%,14%);
+
+    display: flex;
+}
+
+.container ul {
+    list-style-type: none;
 }
