--- a/flexbox-3/styles.css
+++ b/flexbox-3/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: hsl(37,39%,91%);
     font-family: Avenir, Arial, sans-serif;
