--- a/flexbox-3/styles.css
+++ b/flexbox-3/styles.css
@@ -8,29 +8,31 @@ body {
     font-family: Avenir, Arial, sans-serif;
 }
 
-.logo {
-    width: 120px;
-}
-
-.hamburger {
-    width: 50px;
-}
-
 nav {
-    color: hsl(35, 40%, 91%);
     background-color: hsl(211, 66%, 14%);
+    color: hsl(35, 40%, 91%);
     padding: 20px;
 
     display: flex;
     justify-content: center;
 }
 
+#logo {
+    width: 120px;
+}
+
+#hamburger {
+    width: 30px;
+    display: block;
+}
+
+
 .nav-container {
     width: 1200px;
 
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav-container ul {
@@ -39,7 +41,7 @@ nav {
 
 
 @media screen and (min-width: 576px) {
-    .hamburger {
+    #hamburger {
         display: none;
     }
 
