--- a/pseudo-elements/styles.css
+++ b/pseudo-elements/styles.css
@@ -36,6 +36,10 @@ h1 {
     font-weight: 400;
 }
 
+.highlight:hover {
+    cursor: pointer;
+}
+
 footer {
     background-color: hsl(29, 100%, 47%);
     color: white;
