--- a/css-grid-1/styles.css
+++ b/css-grid-1/styles.css
@@ -1,23 +1,31 @@
 .grid-container {
+    background-color: hsl(212, 36%, 90%);
+    display: grid;
+    grid-template-rows: 200px 400px 150px;
+    grid-template-columns: repeat(3, 1fr);
 
 }
 
 .grid-item1 {
-
+background-color: hsl(212, 43%, 65%);
 }
 
 .grid-item2 {
+    background-color: hsl(212, 43%, 65%);
 
 }
 
 .grid-item3 {
+    background-color: hsl(212, 43%, 65%);
 
 }
 
 .grid-item4 {
+    background-color: hsl(212, 43%, 65%);
 
 }
 
 .grid-item5 {
+    background-color: hsl(212, 43%, 65%);
 
 }
