--- a/css-grid-1/styles.css
+++ b/css-grid-1/styles.css
@@ -1,31 +1,47 @@
 .grid-container {
+    font-family: "Helvetica Neue", Arial, sans-serif;
     background-color: hsl(212, 36%, 90%);
     display: grid;
     grid-template-rows: 200px 400px 150px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-areas: "item1 item1 item1 item2 item2 item2"
+                        "item3 item3 item4 item4 item4 item4"
+                        "item5 item5 item5 item5 item5 item5";
+    grid-gap: 16px 16px;
+}
+
+.grid-item1,
+.grid-item2,
+.grid-item3,
+.grid-item4,
+.grid-item5 {
+    border: 2px solid hsl(212, 43%, 85%);
+    color: white;
+    background-color: hsl(212, 43%, 65%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
 .grid-item1 {
-background-color: hsl(212, 43%, 65%);
+    grid-area: item1;
 }
 
 .grid-item2 {
-    background-color: hsl(212, 43%, 65%);
-
+    grid-area: item2
 }
 
 .grid-item3 {
-    background-color: hsl(212, 43%, 65%);
+    grid-area: item3;
 
 }
 
 .grid-item4 {
-    background-color: hsl(212, 43%, 65%);
+    grid-area: item4;
 
 }
 
 .grid-item5 {
-    background-color: hsl(212, 43%, 65%);
-
+    grid-area: item5;
 }
