made all blocks flex

--- a/css-grid-2/styles.css
+++ b/css-grid-2/styles.css
@@ -4,3 +4,9 @@ columns: 4
 .grid-container {
     width: 900px;
 }
+
+.flex-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
