--- a/css-grid-2/styles.css
+++ b/css-grid-2/styles.css
@@ -7,6 +7,16 @@ body {
 .grid-container {
     width: 900px;
     background-color: hsl(212,37%,90%);
+    display: grid;
+    grid-template-rows: repeat(7, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas:" .      .   .      one"
+                        "two    two three    . "
+                        "two    two four   five"
+                        "  .     .    .    .   "
+                        "  .    six seven seven"
+                        "eight  nine seven seven"
+                        "ten      .    .     ."
 
 }
 
