--- a/css-grid-2/styles.css
+++ b/css-grid-2/styles.css
@@ -1,5 +1,3 @@
-/*rows: 7*/
-/*columns: 4*/
 
 body {
     color: white;
@@ -8,7 +6,8 @@ body {
     width: 900px;
     background-color: hsl(212,37%,90%);
     display: grid;
-    grid-template-rows: repeat(7, 1fr);
+    grid-gap: 16px 16px;
+    grid-template-rows: repeat(7, 200px);
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas:" .      .   .      one"
                         "two    two three    . "
